updated normalization .pt file

--- a/classapp/transformer_classifier/sentinel_pt_prep.ipynb
+++ b/classapp/transformer_classifier/sentinel_pt_prep.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "1a7d47ec-5641-4220-8688-d418deced9d6",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "72"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "11a54ca2-ccf3-44c9-81b3-a3478c4d778f",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
        "        [ 500.,  368., 2692., 1226., 1187.,  898.]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "2ca00162-1d6a-4fb7-861f-681cd1f69cd1",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "a8db0178-90e9-4f6f-8549-34220d4172a4",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "00646731-709b-4b3b-af90-d2be8130478e",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
        "torch.Size([61, 7])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "61a77c29-1060-4df5-b43e-ad6b3e6884ba",
    "metadata": {},
    "outputs": [
@@ -676,15 +676,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ecb50437-4b94-466f-bc64-679a497f533d",
+   "execution_count": 29,
+   "id": "eee5a373-e6c4-4182-8cb6-1a0aa3bf1667",
    "metadata": {},
    "outputs": [],
    "source": [
-    "norms = {'s1_col_std' : s1_col_std,\n",
+    "norms = {'s1_col_names' : ['loc_id','day','HH','VV','VH','HV','angle'],\n",
+    "         's1_col_std' : s1_col_std,\n",
     "         's1_col_means' : s1_col_means,\n",
+    "         's2_col_names' : ['loc_id','day','B8','B4','B3','B2'],\n",
     "         's2_col_std' : s2_col_std,\n",
-    "         's2_col_means' : s2_col_means}\n",
+    "         's2_col_means' : s2_col_means,\n",
+    "         'day0' : date_range[0],\n",
+    "         'date_range' : date_range}\n",
+    "\n",
+    "torch.save(norms, os.path.join(data_path, 'model_data_norms.pt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "92580bdd-2db3-429a-b698-c2ddad0a7c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'s1_col_names': ['loc_id', 'day', 'HH', 'VV', 'VH', 'HV', 'angle'],\n",
+       " 's1_col_std': tensor([  1.0000, 365.0000,   1.0000,   3.4645,   4.1846,   1.0000,  90.0000],\n",
+       "        dtype=torch.float64),\n",
+       " 's1_col_means': tensor([  0.0000,   0.0000,   0.0000, -10.6189, -18.0191,   0.0000,  37.6008],\n",
+       "        dtype=torch.float64),\n",
+       " 's2_col_names': ['loc_id', 'day', 'B8', 'B4', 'B3', 'B2'],\n",
+       " 's2_col_std': tensor([  1.0000, 365.0000, 712.1756, 604.6329, 361.9943, 342.0948],\n",
+       "        dtype=torch.float64),\n",
+       " 's2_col_means': tensor([   0.0000,    0.0000, 2831.9051, 1125.1194, 1026.9053,  749.2618],\n",
+       "        dtype=torch.float64),\n",
+       " 'day0': Timestamp('2019-06-01 00:00:00'),\n",
+       " 'date_range': DatetimeIndex(['2019-06-01', '2020-05-31'], dtype='datetime64[ns]', freq=None)}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "norms2 = torch.load(os.path.join(data_path, 'model_data_norms.pt'))\n",
+    "norms2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c5c1a83e-13b2-4ad5-ad95-c98a2e8203cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# norms\n",
     "torch.save(norms, os.path.join(data_path, 'model_data_norms.pt'))\n",
     "torch.save(loc_s1_ts_norm, os.path.join(data_path, 'model_data_s1.pt'))\n",
@@ -914,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
