--- a/transformer_classifier/sentinel_pt_prep.ipynb
+++ b/transformer_classifier/sentinel_pt_prep.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "6423268d-14f9-45d4-8308-2d0d09e2d413",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "9ca4887b-b3b1-45e0-ba1e-efb35e002f64",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "719bf100-0b7c-4c67-bc2e-8bafab8b1a5a",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "c029b0de-8873-4e7a-82f0-ea8840e64a55",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[501 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "f656419e-c374-40df-bc83-bea4b191a0b3",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
     "    s1_ts['loc_id'] = loc_id\n",
     "    \n",
     "    # select only predictor and position columns, return tensor\n",
-    "    s1_ts_x = s1_ts[['loc_id','day','HH','VV','VH','HV','angle']]\n",
+    "    s1_ts_x = s1_ts[['loc_id','day','VV','VH','angle']]\n",
     "    \n",
     "    return s1_ts_x"
    ]
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "1a7d47ec-5641-4220-8688-d418deced9d6",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "72"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,27 +408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "11a54ca2-ccf3-44c9-81b3-a3478c4d778f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[   0.,   55., 4320.,  263.,  582.,  304.],\n",
-       "        [   0.,  120., 3896.,  472.,  785.,  560.],\n",
-       "        [   0.,  145., 3809.,  340.,  623.,  346.],\n",
-       "        ...,\n",
-       "        [ 500.,  348., 2590., 1245., 1153.,  844.],\n",
-       "        [ 500.,  363., 3241., 1605., 1565., 1281.],\n",
-       "        [ 500.,  368., 2692., 1226., 1187.,  898.]], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def resample_nearest_days(tensor_orig, days_select, day_col):\n",
     "    \"\"\"\n",
@@ -473,14 +456,31 @@
     "                                           id_col = 0, \n",
     "                                           day_col = 1)\n",
     "\n",
-    "s1_ts_resampled\n",
-    "\n",
     "s2_ts_resampled = resample_id_nearest_days(tensor_full = loc_s2_ts_tensor, \n",
     "                                           days_select = days_select, \n",
     "                                           id_col = 0, \n",
-    "                                           day_col = 1)\n",
-    "\n",
-    "s2_ts_resampled"
+    "                                           day_col = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ca8d549d-d8b3-4bc1-925f-b43b181d1f3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([69576, 5])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_s1_ts_tensor.shape"
    ]
   },
   {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "2ca00162-1d6a-4fb7-861f-681cd1f69cd1",
    "metadata": {},
    "outputs": [
@@ -501,21 +501,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normalized sentinel-1 data: torch.Size([29749, 7])\n",
-      "Columns: [loc_id, day_norm, HH, VV, HV, VV, angle]\n",
-      "tensor([[ 0.0000e+00,  2.4658e-02,  0.0000e+00,  ...,  6.9264e-02,\n",
-      "          0.0000e+00, -1.4274e-02],\n",
-      "        [ 0.0000e+00,  5.7534e-02,  0.0000e+00,  ...,  1.0661e+00,\n",
-      "          0.0000e+00, -1.4248e-02],\n",
-      "        [ 0.0000e+00,  9.0411e-02,  0.0000e+00,  ...,  1.1190e+00,\n",
-      "          0.0000e+00, -1.4197e-02],\n",
+      "Normalized sentinel-1 data: torch.Size([29749, 5])\n",
+      "Columns: [loc_id, day_norm, VV, VH, angle]\n",
+      "tensor([[ 0.0000e+00,  2.4658e-02,  4.3614e-01,  6.9264e-02,  4.0351e-01],\n",
+      "        [ 0.0000e+00,  5.7534e-02,  1.8520e+00,  1.0661e+00,  4.0354e-01],\n",
+      "        [ 0.0000e+00,  9.0411e-02,  7.9714e-01,  1.1190e+00,  4.0359e-01],\n",
       "        ...,\n",
-      "        [ 5.0000e+02,  9.6438e-01,  0.0000e+00,  ..., -2.8720e-01,\n",
-      "          0.0000e+00,  2.3965e-02],\n",
-      "        [ 5.0000e+02,  9.9178e-01,  0.0000e+00,  ..., -6.9950e-02,\n",
-      "          0.0000e+00,  5.7148e-02],\n",
-      "        [ 5.0000e+02,  9.9726e-01,  0.0000e+00,  ...,  3.1836e-01,\n",
-      "          0.0000e+00,  2.3966e-02]], dtype=torch.float64)\n"
+      "        [ 5.0000e+02,  9.6438e-01, -3.2658e-01, -2.8720e-01,  4.4175e-01],\n",
+      "        [ 5.0000e+02,  9.9178e-01, -9.4207e-01, -6.9950e-02,  4.7493e-01],\n",
+      "        [ 5.0000e+02,  9.9726e-01,  2.0763e-01,  3.1836e-01,  4.4175e-01]],\n",
+      "       dtype=torch.float64)\n"
      ]
     }
    ],
@@ -525,9 +520,14 @@
     "\n",
     "s1_ts_resampled[torch.isnan(s1_ts_resampled)] = 0\n",
     "\n",
+    "torch.save(s1_ts_resampled, os.path.join(data_path, 's1_data_prepped.pt'))\n",
+    "\n",
     "s1_col_means= s1_ts_resampled.mean(dim = 0)#.shape #.unsqueeze(0).repeat(5,1)\n",
     "s1_col_std= s1_ts_resampled.std(dim = 0)#.shape #.unsqueeze(0).repeat(5,1)\n",
-    "s1_col_means[[0,1]] = 0\n",
+    "\n",
+    "# print(s1_col_means)\n",
+    "s1_col_means[[0,1,-1]] = 0\n",
+    "# print(s1_col_means)\n",
     "s1_col_std[[0]] = 1\n",
     "s1_col_std[s1_col_std==0] = 1\n",
     "s1_col_std[[1]] = 365 # normalize days by 365 -- each year ranges from 0 to 1\n",
@@ -541,7 +541,7 @@
     "\n",
     "loc_s1_ts_norm = (s1_ts_resampled - s1_ts_resampled_mean) / s1_ts_resampled_std\n",
     "print(\"Normalized sentinel-1 data:\", loc_s1_ts_norm.shape)\n",
-    "print(\"Columns: [loc_id, day_norm, HH, VV, HV, VV, angle]\")\n",
+    "print(\"Columns: [loc_id, day_norm, VV, VH, angle]\")\n",
     "print(loc_s1_ts_norm)"
    ]
   },
@@ -554,7 +554,7 @@
     "\n",
     "* loc_id: id of point location\n",
     "* day_norm: (day since June 1) / 365\n",
-    "* HH, VV, HV, VV: standard normalization\n",
+    "* VV, VH: standard normalization (HH, HV, not included)\n",
     "* angle: (deg angle) / 90\n",
     "\n",
     "Below shows the maximum number of observations for each location"
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "a8db0178-90e9-4f6f-8549-34220d4172a4",
    "metadata": {},
    "outputs": [
@@ -593,17 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "00646731-709b-4b3b-af90-d2be8130478e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([61, 7])"
+       "torch.Size([61, 5])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "61a77c29-1060-4df5-b43e-ad6b3e6884ba",
    "metadata": {},
    "outputs": [
@@ -635,6 +635,9 @@
     "\n",
     "row_means= s2_ts_resampled.mean(dim = 1)#.shape #.unsqueeze(0).repeat(5,1)\n",
     "s2_ts_resampled = s2_ts_resampled[~torch.isnan(row_means)]\n",
+    "\n",
+    "torch.save(s2_ts_resampled, os.path.join(data_path, 's2_data_prepped.pt'))\n",
+    "\n",
     "s2_col_means= s2_ts_resampled.mean(dim = 0)#.shape #.unsqueeze(0).repeat(5,1)\n",
     "s2_col_std= s2_ts_resampled.std(dim = 0)#.shape #.unsqueeze(0).repeat(5,1)\n",
     "s2_col_means[[0,1]] = 0\n",
@@ -676,12 +679,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "eee5a373-e6c4-4182-8cb6-1a0aa3bf1667",
    "metadata": {},
    "outputs": [],
    "source": [
-    "norms = {'s1_col_names' : ['loc_id','day','HH','VV','VH','HV','angle'],\n",
+    "norms = {'s1_col_names' : ['loc_id','day','VV','VH','angle'],\n",
     "         's1_col_std' : s1_col_std,\n",
     "         's1_col_means' : s1_col_means,\n",
     "         's2_col_names' : ['loc_id','day','B8','B4','B3','B2'],\n",
@@ -695,18 +698,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "92580bdd-2db3-429a-b698-c2ddad0a7c46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'s1_col_names': ['loc_id', 'day', 'HH', 'VV', 'VH', 'HV', 'angle'],\n",
-       " 's1_col_std': tensor([  1.0000, 365.0000,   1.0000,   3.4645,   4.1846,   1.0000,  90.0000],\n",
-       "        dtype=torch.float64),\n",
-       " 's1_col_means': tensor([  0.0000,   0.0000,   0.0000, -10.6189, -18.0191,   0.0000,  37.6008],\n",
-       "        dtype=torch.float64),\n",
+       "{'s1_col_names': ['loc_id', 'day', 'VV', 'VH', 'angle'],\n",
+       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4645,   4.1846,  90.0000], dtype=torch.float64),\n",
+       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6189, -18.0191,   0.0000], dtype=torch.float64),\n",
        " 's2_col_names': ['loc_id', 'day', 'B8', 'B4', 'B3', 'B2'],\n",
        " 's2_col_std': tensor([  1.0000, 365.0000, 712.1756, 604.6329, 361.9943, 342.0948],\n",
        "        dtype=torch.float64),\n",
@@ -716,7 +717,7 @@
        " 'date_range': DatetimeIndex(['2019-06-01', '2020-05-31'], dtype='datetime64[ns]', freq=None)}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "c5c1a83e-13b2-4ad5-ad95-c98a2e8203cf",
    "metadata": {},
    "outputs": [],
@@ -749,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "1b50b380-68be-4cf4-9fce-d4a0cb29a68c",
    "metadata": {},
    "outputs": [
@@ -767,7 +768,7 @@
        "        [9, 0]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "id": "134d15a4-0ff7-4a1c-bf00-6774a06415c4",
    "metadata": {},
    "outputs": [],
@@ -813,24 +814,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "id": "8d15cf98-38b9-4db2-b835-edd3c5fc30d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'s1_col_std': tensor([  1.0000, 365.0000,   1.0000,   3.4645,   4.1846,   1.0000,  90.0000],\n",
-       "        dtype=torch.float64),\n",
-       " 's1_col_means': tensor([  0.0000,   0.0000,   0.0000, -10.6189, -18.0191,   0.0000,  37.6008],\n",
-       "        dtype=torch.float64),\n",
+       "{'s1_col_names': ['loc_id', 'day', 'VV', 'VH', 'angle'],\n",
+       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4645,   4.1846,  90.0000], dtype=torch.float64),\n",
+       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6189, -18.0191,   0.0000], dtype=torch.float64),\n",
+       " 's2_col_names': ['loc_id', 'day', 'B8', 'B4', 'B3', 'B2'],\n",
        " 's2_col_std': tensor([  1.0000, 365.0000, 712.1756, 604.6329, 361.9943, 342.0948],\n",
        "        dtype=torch.float64),\n",
        " 's2_col_means': tensor([   0.0000,    0.0000, 2831.9051, 1125.1194, 1026.9053,  749.2618],\n",
-       "        dtype=torch.float64)}"
+       "        dtype=torch.float64),\n",
+       " 'day0': Timestamp('2019-06-01 00:00:00'),\n",
+       " 'date_range': DatetimeIndex(['2019-06-01', '2020-05-31'], dtype='datetime64[ns]', freq=None)}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "id": "fc475250-27d4-4f80-99ad-05d6e7a0a3ca",
    "metadata": {},
    "outputs": [
@@ -898,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "f4d801df-ea7d-43f6-8f81-530663201366",
    "metadata": {},
    "outputs": [
@@ -944,6 +947,22 @@
     "print('\\nValidate (loc_test summary)\\n', loc_valid.groupby('class').count())\n",
     "print('\\nTesting (loc_test summary)\\n', loc_test.groupby('class').count())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d21272-3afe-465a-a6c0-744123287ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d9611ef-c2f4-490a-be06-802110cde622",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -962,7 +981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
