updated start date for _orig data to 05/01

--- a/transformer_classifier/sentinel_pt_prep.ipynb
+++ b/transformer_classifier/sentinel_pt_prep.ipynb
@@ -471,7 +471,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([69576, 5])"
+       "torch.Size([69602, 5])"
       ]
      },
      "execution_count": 8,
@@ -501,15 +501,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normalized sentinel-1 data: torch.Size([29749, 5])\n",
+      "Normalized sentinel-1 data: torch.Size([29742, 5])\n",
       "Columns: [loc_id, day_norm, VV, VH, angle]\n",
-      "tensor([[ 0.0000e+00,  2.4658e-02,  4.3614e-01,  6.9264e-02,  4.0351e-01],\n",
-      "        [ 0.0000e+00,  5.7534e-02,  1.8520e+00,  1.0661e+00,  4.0354e-01],\n",
-      "        [ 0.0000e+00,  9.0411e-02,  7.9714e-01,  1.1190e+00,  4.0359e-01],\n",
+      "tensor([[ 0.0000e+00,  8.2192e-03,  1.9151e+00,  1.2707e-01,  4.0091e-01],\n",
+      "        [ 0.0000e+00,  1.0959e-02,  1.2505e+00,  9.2072e-01,  4.0358e-01],\n",
+      "        [ 0.0000e+00,  4.1096e-02,  7.8613e-01,  1.0919e+00,  4.0092e-01],\n",
       "        ...,\n",
-      "        [ 5.0000e+02,  9.6438e-01, -3.2658e-01, -2.8720e-01,  4.4175e-01],\n",
-      "        [ 5.0000e+02,  9.9178e-01, -9.4207e-01, -6.9950e-02,  4.7493e-01],\n",
-      "        [ 5.0000e+02,  9.9726e-01,  2.0763e-01,  3.1836e-01,  4.4175e-01]],\n",
+      "        [ 5.0000e+02,  9.6164e-01,  1.6493e-02,  8.3972e-01,  4.7550e-01],\n",
+      "        [ 5.0000e+02,  9.8356e-01,  2.5694e-01, -3.5740e-01,  4.4180e-01],\n",
+      "        [ 5.0000e+02,  9.9452e-01,  2.9113e-01,  1.2988e+00,  4.7551e-01]],\n",
       "       dtype=torch.float64)\n"
      ]
     }
@@ -572,8 +572,8 @@
      "text": [
       "Sentinel 1:\n",
       "Median number of observations across loc_id's: 61.0\n",
-      "Median number of observations across loc_id's 59.37924151696607\n",
-      "Max number of observations is 62 for loc_id 1\n"
+      "Median number of observations across loc_id's 59.365269461077844\n",
+      "Max number of observations is 61 for loc_id 2\n"
      ]
     }
    ],
@@ -623,9 +623,9 @@
      "output_type": "stream",
      "text": [
       "Sentinel 2:\n",
-      "Median number of observations across loc_id's: 34.0\n",
-      "Median number of observations across loc_id's 33.125748502994014\n",
-      "Max number of observations is 51 for loc_id 96\n"
+      "Median number of observations across loc_id's: 33.0\n",
+      "Median number of observations across loc_id's 32.18562874251497\n",
+      "Max number of observations is 49 for loc_id 481\n"
      ]
     }
    ],
@@ -706,12 +706,12 @@
      "data": {
       "text/plain": [
        "{'s1_col_names': ['loc_id', 'day', 'VV', 'VH', 'angle'],\n",
-       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4645,   4.1846,  90.0000], dtype=torch.float64),\n",
-       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6189, -18.0191,   0.0000], dtype=torch.float64),\n",
+       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4918,   4.1804,  90.0000], dtype=torch.float64),\n",
+       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6641, -17.9761,   0.0000], dtype=torch.float64),\n",
        " 's2_col_names': ['loc_id', 'day', 'B8', 'B4', 'B3', 'B2'],\n",
-       " 's2_col_std': tensor([  1.0000, 365.0000, 712.1756, 604.6329, 361.9943, 342.0948],\n",
+       " 's2_col_std': tensor([  1.0000, 365.0000, 716.9288, 591.0932, 353.5377, 334.8079],\n",
        "        dtype=torch.float64),\n",
-       " 's2_col_means': tensor([   0.0000,    0.0000, 2831.9051, 1125.1194, 1026.9053,  749.2618],\n",
+       " 's2_col_means': tensor([   0.0000,    0.0000, 2824.0430, 1107.9245, 1015.5843,  738.3131],\n",
        "        dtype=torch.float64),\n",
        " 'day0': Timestamp('2019-05-01 00:00:00'),\n",
        " 'date_range': DatetimeIndex(['2019-05-01', '2020-04-30'], dtype='datetime64[ns]', freq=None)}"
@@ -822,12 +822,12 @@
      "data": {
       "text/plain": [
        "{'s1_col_names': ['loc_id', 'day', 'VV', 'VH', 'angle'],\n",
-       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4645,   4.1846,  90.0000], dtype=torch.float64),\n",
-       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6189, -18.0191,   0.0000], dtype=torch.float64),\n",
+       " 's1_col_std': tensor([  1.0000, 365.0000,   3.4918,   4.1804,  90.0000], dtype=torch.float64),\n",
+       " 's1_col_means': tensor([  0.0000,   0.0000, -10.6641, -17.9761,   0.0000], dtype=torch.float64),\n",
        " 's2_col_names': ['loc_id', 'day', 'B8', 'B4', 'B3', 'B2'],\n",
-       " 's2_col_std': tensor([  1.0000, 365.0000, 712.1756, 604.6329, 361.9943, 342.0948],\n",
+       " 's2_col_std': tensor([  1.0000, 365.0000, 716.9288, 591.0932, 353.5377, 334.8079],\n",
        "        dtype=torch.float64),\n",
-       " 's2_col_means': tensor([   0.0000,    0.0000, 2831.9051, 1125.1194, 1026.9053,  749.2618],\n",
+       " 's2_col_means': tensor([   0.0000,    0.0000, 2824.0430, 1107.9245, 1015.5843,  738.3131],\n",
        "        dtype=torch.float64),\n",
        " 'day0': Timestamp('2019-05-01 00:00:00'),\n",
        " 'date_range': DatetimeIndex(['2019-05-01', '2020-04-30'], dtype='datetime64[ns]', freq=None)}"
